--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
-}
 
+  margin-left: auto;
+  margin-right: auto;
+  width: 1100px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -33,6 +36,83 @@
     transform: rotate(0deg);
   }
   to {
+    transform: rotate(360deg);
+  }
+}
+.container {
+  width: auto;
+  height: auto;
+  margin: 0 auto;
+  padding: 0em 20em;
+  position: relative;
+}
+.containerr {
+  border: rgb(227, 0, 64) dashed 2.4px;
+  border-top: rgb(227, 0, 64) solid;
+  border-bottom: rgb(227, 0, 64) solid;
+  margin: 1em;
+  border-radius: 4em;
+  padding-bottom: 1em;
+}
+.link {
+  background-color: rgb(227, 0, 64);
+  color: whitesmoke;
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 3em;
+}
+.link:hover {
+  opacity: 70%;
+}
+.title {
+  color: rgb(227, 0, 64);
+}
+.searchbar {
+  height: 1.3em;
+  font-size: 1.4em;
+  border-radius: 5em;
+  background-color: rgb(227, 0, 64);
+  color: whitesmoke;
+  padding: 2px 10px;
+}
+.searchbar:hover {
+  opacity: 85%;
+}
+.content,
+.loading {
+  color: rgb(87, 90, 96);
+}
+.loading {
+  size: 1.4em;
+}
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 4px solid #fff;
+  border-right: 4px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border-left: 4px solid rgb(227, 0, 64);
+  border-bottom: 4px solid transparent;
+  animation: rotation 0.5s linear infinite reverse;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
     transform: rotate(360deg);
   }
 }
