--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-
   margin-left: auto;
   margin-right: auto;
   width: 1100px;
@@ -96,4 +95,18 @@
   100% {
     transform: rotate(360deg);
   }
+}
+.more {
+  color: #1677ff;
+}
+.more:hover {
+  opacity: 80%;
+  text-decoration: underline;
+}
+#search::placeholder {
+  color: #1677ff;
+}
+.searchbar {
+  padding: 0em 18em;
+  margin: 0em 0em 2em 0em;
 }
